# language-data

./: .eslintrc.json  .gitattributes  .gitignore  .phpcs.xml  .readthedocs.yaml  .travis.yml  CHANGELOG.md  README.md  composer.json  eslint.config.mjs  index.js  language-data.json  package-lock.json  package.json  phpunit.xml  pyproject.toml  vite.config.js  yaml-sort-checker.yml
.github/workflows/: node.yml  php.yml  python.yml
.phan/: config.php
data/: langdb.yaml  language-data.json  ulsdata2json.php
docs/: Doxyfile  api.rst  conf.py  index.rst  requirements.txt
docs/_templates/: breadcrumbs.html
docs/api/: languagedata.rst
docs/user/: adding_new_language.rst
python/languagedata/: __init__.py  language-data.json
src/: LanguageData.php  LanguageUtil.php  index.js
src/util/: ulsdata2json.php
test/: index.js
tests/js/: index.js
tests/php/: LanguageDataTest.php  LanguageUtilTest.php
tests/python/: test_languagedata.py
